console and doc dark mode fix

--- a/dark.css
+++ b/dark.css
@@ -6,7 +6,8 @@ body {
   background: #888888;
 }
 #optionsPage a,
-#moreInfo a {
+#moreInfo a,
+.eventDoc a {
   color: lightblue;
 }
 .optionButton {
